--- a/vercel.json
+++ b/vercel.json
@@ -2,15 +2,15 @@
     "version":2,
     "builds":[
         {
-            "src":"./app.py",
-            "use":"@vercel/python",
+            "src": "app.py",
+            "use": "@vercel/python",
             "config":{"runtime":"python3.9"}
         }
     ],
     "routes":[
         {
-            "src":"/(.*)",
-            "dest":"/"
+            "src": "/(.*)",
+            "dest": "app.py"
         }
     ]
 }
