--- a/requirements.txt
+++ b/requirements.txt
@@ -1,7 +1,6 @@
 Flask==1.1.2
 gunicorn==20.0.4
-Jinja2==2.10.1
+jinja2==2.10.1
 Werkzeug==0.16.0
-Jinja2==2.10.1
 itsdangerous==1.1.0
 MarkupSafe==1.1.1
