--- a/requirements.txt
+++ b/requirements.txt
@@ -1,6 +1,6 @@
-Flask==1.1.2
-gunicorn==19.9.0
-jinja2==3.1.6
-Werkzeug==0.16.0
-itsdangerous==1.1.0
-MarkupSafe==3.0.2.
+Flask==2.2.5
+gunicorn==20.1.0
+Jinja2==3.1.6
+MarkupSafe==2.1.5
+itsdangerous==2.1.2
+Werkzeug==2.2.3
