--- a/requirements.txt
+++ b/requirements.txt
@@ -1,6 +1,23 @@
-Flask==2.2.5
-gunicorn==20.1.0
-Jinja2==3.1.6
-MarkupSafe==2.1.5
-itsdangerous==2.1.2
-Werkzeug==2.2.3
+click==8.1.8
+colorama==0.4.6
+cycler==0.12.1
+Flask==1.1.2
+gunicorn==20.0.4
+itsdangerous==1.1.0
+Jinja2==2.10.1
+joblib==1.4.2
+kiwisolver==1.4.7
+MarkupSafe==1.1.1
+matplotlib==3.4.2
+numpy==1.20.2
+pandas==1.2.4
+pillow==11.2.1
+pyparsing==3.2.3
+python-dateutil==2.9.0.post0
+pytz==2025.2
+scikit-learn==0.24.2
+scipy==1.10.1
+seaborn==0.11.1
+six==1.17.0
+threadpoolctl==3.6.0
+Werkzeug==0.16.0
