--- a/requirements.txt
+++ b/requirements.txt
@@ -1,23 +1,31 @@
+blinker==1.9.0
 click==8.1.8
 colorama==0.4.6
+contourpy==1.3.0
 cycler==0.12.1
-Flask==1.1.2
-gunicorn==20.0.4
-itsdangerous==1.1.0
-Jinja2==2.10.1
+flask==3.1.0
+fonttools==4.57.0
+gunicorn==23.0.0
+importlib-metadata==8.6.1
+importlib-resources==6.5.2
+itsdangerous==2.2.0
+jinja2==3.1.6
 joblib==1.4.2
 kiwisolver==1.4.7
-MarkupSafe==1.1.1
-matplotlib==3.4.2
-numpy==1.20.2
-pandas==1.2.4
+MarkupSafe==3.0.2
+matplotlib==3.9.4
+numpy==1.26.4
+packaging==24.2
+pandas==2.2.3
 pillow==11.2.1
 pyparsing==3.2.3
 python-dateutil==2.9.0.post0
 pytz==2025.2
-scikit-learn==0.24.2
+scikit-learn==1.6.1
 scipy==1.10.1
-seaborn==0.11.1
+seaborn==0.13.2
 six==1.17.0
 threadpoolctl==3.6.0
-Werkzeug==0.16.0
+tzdata==2025.2
+werkzeug==3.1.3
+zipp==3.21.0
